--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
+
 nav {
-    background-color: #333;
+    background-color:#1c2331;
     height: 50px;
     display: flex;
     justify-content: space-between;
